Fix URL of ncbind to be relative

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/libtom/libtommath.git
 [submodule "external/ncbind"]
 	path = external/ncbind
-	url = ../ncbind
+	url = https://github.com/uyjulian/ncbind.git
